test/spec_vectors/simd_i8x16_cmp/fail/module_30.wat
(module (func $i8x16.ge_u-1st-arg-empty (result v128) (i8x16.ge_u (v128.const i8x16 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0))))